syntax = "proto3";
package api_def;
option go_package = "/api_def";

import "internal/service_hub/backup/api_def/AllKVsBackup.proto";
import "internal/service_hub/backup/api_def/AllKVsRestore.proto";
import "internal/service_hub/backup/api_def/Snapshot.proto";
import "internal/service_hub/backup/api_def/SnapshotInfo.proto";
import "internal/service_hub/backup/api_def/SnapshotRestore.proto";

service Backup {
  rpc AllKVsBackup(AllKVsBackup.Input) returns (AllKVsBackup.Output);
  rpc AllKVsRestore(AllKVsRestore.Input) returns (AllKVsRestore.Output);
  rpc Snapshot(Snapshot.Input) returns (Snapshot.Output);
  rpc SnapshotInfo(SnapshotInfo.Input) returns (SnapshotInfo.Output);
  rpc SnapshotRestore(SnapshotRestore.Input) returns (SnapshotRestore.Output);
}